--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
-  "name": "middle.messenger.praktikum.yandex",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "start": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview"
-  },
-  "devDependencies": {
-    "normalize.css": "^8.0.1",
-    "sass": "^1.94.2",
-    "typescript": "~5.9.3",
-    "vite": "^7.2.4",
-    "vite-plugin-handlebars": "^2.0.0"
-  }
+    "name": "middle.messenger.praktikum.yandex",
+    "version": "1.0.0",
+    "type": "module",
+    "engines": {
+        "node": ">=16"
+    },
+    "scripts": {
+        "start": "vite",
+        "build": "tsc && vite build",
+        "preview": "vite preview"
+    },
+    "devDependencies": {
+        "normalize.css": "^8.0.1",
+        "sass": "^1.94.2",
+        "typescript": "~5.9.3",
+        "vite": "^7.2.4",
+        "vite-plugin-handlebars": "^2.0.0"
+    }
 }
