--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
         "node": ">=16"
     },
     "scripts": {
-        "start": "vite",
+        "start": "npm run build && vite preview --port 3000",
+        "dev": "vite",
         "build": "tsc && vite build",
         "preview": "vite preview"
     },
